# goit-pythonweb-hw-01

./: pyproject.toml  task_01.py  task_02.py
