[project]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = "My Python web homework"
authors = [
    {name = "Kateryna",email = "tkachenko.city@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.black]
line-length = 79

